tests/rascal/negative/type_errors/L1/20_expression_ES10_D4_1.ob
MODULE Test20;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               r := (((+ (200 * 1)) DIV ((- z) MOD (x + 0))) < (((- y) DIV (- 1)) MOD ((0 DIV 1223) MOD (- 1))));
               p := ((((200 - x) # (+ y)) OR ((y # 200) OR (1 > z))) OR (((2 * 0) >= (y * 1223)) & ((200 - z) < (1 MOD 1223))));
               q := ((((0 DIV 1) - (1 - 1)) # ((- 0) + (- 2))) & (((0 + 200) # (200 - 200)) OR ((z - 200) > (200 MOD 0))));
               q := ((- ((0 + 200) + (1223 - 1223))) = ((+ (x * y)) MOD (- (y - z))));
               y := ((- ((200 * x) - (- 1223))) * ((- (1223 - x)) * ((200 DIV x) DIV (2 + 200))));
               z := (((+ (z DIV 0)) * ((1223 - 1223) * (200 * 1))) MOD ((- (0 DIV 1223)) - (- (y MOD x))));
               p := (((- (1223 - x)) - (+ (200 + z))) # (+ (+ (2 + y))));
               x := ((((0 + 2) DIV (1 DIV 1223)) + (+ (0 DIV 1223))) * (((- y) - (+ 1223)) MOD ((- 1) - (0 DIV 0))));
               x := (- (((y + 1) MOD (+ 200)) DIV ((y + 1223) - (0 - x))));
  (* error *)  z := (- (- ((+ r) MOD (0 + 0))))
END Test20.